--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,7 @@
   }
 }
 
-/* body {
+.my-bg {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -25,4 +25,4 @@
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-} */
+}
