--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -15,14 +15,39 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
+} */
 
 .my-bg {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  color: rgb(214, 219, 220);
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(255, 255, 255)) rgb(214, 219, 220);
+}
+
+p {
+  color: #000;
+}
+
+@media (prefers-color-scheme: dark) {
+  p {
+    color: #fefefe;
+  }
+
+  /* .my-bg {
+    background: linear-gradient(to bottom,
+        transparent,
+        rgb(0, 0, 0) rgb(20, 20, 20))
+  } */
+
+  div {
+    color: #fefefe;
+  }
+  
+  button { 
+    color: #fefefe;
+  }
+}
+
+div {
+  color: #000;
 }
