--- a/app/globals.css
+++ b/app/globals.css
@@ -32,7 +32,8 @@ p {
   p {
     color: #fefefe;
   }
-  a{ 
+
+  a {
     color: #fefefe;
   }
 
@@ -45,12 +46,50 @@ p {
   div {
     color: #fefefe;
   }
-  
-  button { 
+
+  button {
     color: #fefefe;
   }
 }
 
 div {
   color: #000;
+}
+
+.tabs {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 400px;
+  font-family: sans-serif;
+}
+
+.tabs__label {
+  padding: 10px 16px;
+  cursor: pointer;
+  --tw-blur: blur(2px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.tabs__radio {
+  display: none;
+}
+
+.tabs__content {
+  order: 1;
+  width: 100%;
+  border-bottom: 3px solid #dddddd;
+  line-height: 1.5;
+  font-size: 0.9em;
+  display: none;
+}
+
+.tabs__radio:checked+.tabs__label {
+  font-weight: bold;
+  border-bottom: 2px solid #555;
+  --tw-blur: none;
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.tabs__radio:checked+.tabs__label+.tabs__content {
+  display: initial;
 }
